--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
         
         <div class="contact">
-            <p>📧 যোগাযোগ: <a href="mailto:hello@minimind.online">hello@minimind.online</a></p>
+            <p>📧 যোগাযোগ: <a href="mailto:minimindonline@gmail.com">minimindonline@gmail.com</a></p>
             <p style="margin-top: 15px; font-size: 0.9rem; opacity: 0.8;">
                 &copy; 2025 Minimind Online. All rights reserved.
             </p>
