--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <h2>আমরা আসছি একটি অসাধারণ অভিজ্ঞতা নিয়ে</h2>
         
         <div class="coming-soon">
-            🔥 <strong>আপডেট আসছে খুব শীঘ্রই!</strong>
+            🔥 <strong>আপডেট আসছে খুব !</strong>
         </div>
         
         <p style="font-size: 1.2rem; margin: 20px 0; line-height: 1.6;">
